reduced number of querries to config table for grouped exam report, exam wise n archived report
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@3497 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/app/views/exam/_grouped_exam_report.erb
+++ b/app/views/exam/_grouped_exam_report.erb
@@ -10,6 +10,9 @@
 <%#*</div>%>
 <%# end%>
 <%#*</div>%>
+<% grade_type = "normal" %>
+<% grade_type = "GPA" if @batch.gpa_enabled? %>
+<% grade_type = "CWA" if @batch.cwa_enabled? %>
 <% if @type=="grouped" %>
   <div id="score-table">
     <div class="custom_header">
@@ -18,7 +21,7 @@
     <table id="listing" width="100%">
       <tr class="tr-head">
         <td><%= t('subject') %></td>
-        <% if @batch.gpa_enabled? or @batch.cwa_enabled? %>
+        <% if grade_type=="GPA" or grade_type=="CWA" %>
           <td><%= t('credit') %></td>
         <% end %>
         <% @exam_groups.each do |exam_group| %>
@@ -29,7 +32,7 @@
       <% @subjects.each do |subject| %>
         <tr class="tr-<%= cycle('odd', 'even') %>">
           <td class="col-2" ><%= subject.name %></td>
-          <% if @batch.gpa_enabled? or @batch.cwa_enabled? %>
+          <% if grade_type=="GPA" or grade_type=="CWA" %>
             <td class="col-3"><%= subject.credit_hours.present? ? subject.credit_hours : "-" %></td>
           <% end %>
           <% @exam_groups.each do |exam_group| %>
@@ -37,9 +40,9 @@
             <% @exam = Exam.find_by_subject_id_and_exam_group_id(subject.id,exam_group.id) %>
             <% exam_score = ExamScore.find_by_student_id(@student.id, :conditions=>{:exam_id=>@exam.id})unless @exam.nil? %>
             <td class="col-3">
-              <% if @batch.gpa_enabled? %>
+              <% if grade_type=="GPA" %>
                 <%= exam_score.present? ? "#{exam_score.grading_level || "-"}"+" ["+"#{exam_score.grading_level.present? ? (exam_score.grading_level.credit_points || "-") : "-"}"+"]" : "-" %>
-              <% elsif @batch.cwa_enabled? %>
+              <% elsif grade_type=="CWA" %>
                 <%= exam_score.present? ? "#{exam_score.marks.present? ? ("%.2f" %((exam_score.marks.to_f/@exam.maximum_marks.to_f)*100)) : "-"}"+" ["+"#{exam_score.grading_level.present? ? exam_score.grading_level : "-"}"+"]" : "-" %>
               <% else %>
                 <% if exam_group.exam_type == "MarksAndGrades" %>
@@ -58,9 +61,9 @@
       <% end %>
       <tr class="tr-blank"></tr>
       <tr class="tr-head">
-        <% if @batch.gpa_enabled? %>
+        <% if grade_type=="GPA" %>
           <td colspan="2" align="right"><%= t('gpa') %></td>
-        <% elsif @batch.cwa_enabled? %>
+        <% elsif grade_type=="CWA" %>
           <td colspan="2" align="right"><%= t('weighted_average') %></td>
         <% else %>
           <td align="right"><%= t('percentage') %></td>
