--- a/app/views/exam/combined_grouped_exam_report_pdf.html.erb
+++ b/app/views/exam/combined_grouped_exam_report_pdf.html.erb
@@ -24,6 +24,9 @@
   <div class="hor_line"></div>
   <h2><%= "Grouped Exam Report for Batch : "+@batch.full_name %></h2>
   <div class="hor_line"></div>
+  <% grade_type = "normal" %>
+  <% grade_type = "GPA" if @batch.gpa_enabled? %>
+  <% grade_type = "CWA" if @batch.cwa_enabled? %>
   <% @students.each_with_index do |student,i| %>
     <% general_subjects = Subject.find_all_by_batch_id(@batch.id, :conditions=>"elective_group_id IS NULL and is_deleted=false") %>
     <% student_electives = StudentsSubject.find_all_by_student_id(student.id,:conditions=>"batch_id = #{@batch.id}") %>
@@ -50,7 +53,7 @@
             <table id="pdf-table" width="100%" cellspacing="0">
               <tr class="table-header">
                 <td><%= t('subject') %></td>
-                <% if @batch.gpa_enabled? or @batch.cwa_enabled? %>
+                <% if grade_type=="GPA" or grade_type=="CWA" %>
                   <td><%= t('credit') %></td>
                 <% end %>
                 <% @exam_groups.each do |exam_group| %>
@@ -62,7 +65,7 @@
               <% @subjects.each do |subject| %>
                 <tr class="<%= cycle(c,(["odd","even"]-[c]).first) %>">
                   <td class="col-pdf" ><%= subject.name %></td>
-                  <% if @batch.gpa_enabled? or @batch.cwa_enabled? %>
+                  <% if grade_type=="GPA" or grade_type=="CWA" %>
                     <td class="col-pdf"><%= subject.credit_hours.present? ? subject.credit_hours : "-" %></td>
                   <% end %>
                   <% @exam_groups.each do |exam_group| %>
@@ -70,9 +73,9 @@
                     <% @exam = Exam.find_by_subject_id_and_exam_group_id(subject.id,exam_group.id) %>
                     <% exam_score = ExamScore.find_by_student_id(student.id, :conditions=>{:exam_id=>@exam.id})unless @exam.nil? %>
                     <td class="col-pdf">
-                      <% if @batch.gpa_enabled? %>
+                      <% if grade_type=="GPA" %>
                         <%= exam_score.present? ? "#{exam_score.grading_level || "-"}"+" ["+"#{exam_score.grading_level.present? ? (exam_score.grading_level.credit_points || "-") : "-"}"+"]" : "-" %>
-                      <% elsif @batch.cwa_enabled? %>
+                      <% elsif grade_type=="CWA" %>
                         <%= exam_score.present? ? "#{exam_score.marks.present? ? ("%.2f" %((exam_score.marks.to_f/@exam.maximum_marks.to_f)*100)) : "-"}"+" ["+"#{exam_score.grading_level.present? ? exam_score.grading_level : "-"}"+"]" : "-" %>
                       <% else %>
                         <% if exam_group.exam_type == "MarksAndGrades" %>
@@ -90,9 +93,9 @@
                 </tr>
               <% end %>
               <tr class="table-header">
-                <% if @batch.gpa_enabled? %>
+                <% if grade_type=="GPA" %>
                   <td colspan="2" align="right"><%= t('gpa') %></td>
-                <% elsif @batch.cwa_enabled? %>
+                <% elsif grade_type=="CWA" %>
                   <td colspan="2" align="right"><%= t('weighted_average') %></td>
                 <% else %>
                   <td align="right"><%= t('percentage') %></td>
