--- a/app/views/exam/consolidated_exam_report.html.erb
+++ b/app/views/exam/consolidated_exam_report.html.erb
@@ -38,15 +38,18 @@
 
   <div class="box">
     <h4><%= @batch.course.full_name %> <%= @batch.name %> | <%= @exam_group.name %></h4>
+    <% grade_type = "normal" %>
+    <% grade_type = "GPA" if @batch.gpa_enabled? %>
+    <% grade_type = "CWA" if @batch.cwa_enabled? %>
     <div class="students-table">
       <table id="listing" align="center" width="100%" cellpadding="1" cellspacing="1">
         <tr class="tr-head">
           <td><%= t('name') %></td>
-          <% if @batch.gpa_enabled? or @batch.cwa_enabled? %>
+          <% if grade_type=="GPA" or grade_type=="CWA" %>
             <% @exam_group.exams.each do |exam| %>
               <td><%= exam.subject.code %><%= "(" + exam.subject.credit_hours.to_s + ")"  unless exam.subject.credit_hours.nil? %></td>
             <% end %>
-            <% if @batch.cwa_enabled? %>
+            <% if grade_type=="CWA" %>
               <td><%= t('weighted_average') %></td>
             <% else %>
               <td><%= t('gpa') %></td>
@@ -63,7 +66,7 @@
         <% @exam_group.batch.students.each do |student|%>
           <tr class="tr-<%= cycle('odd', 'even') %>">
             <td class="col-2"><%= student.full_name %></td>
-            <% if @batch.gpa_enabled? %>
+            <% if grade_type=="GPA" %>
               <% total_credits = 0 %>
               <% total_credit_points=0 %>
               <% @exam_group.exams.each do |exam| %>
@@ -77,7 +80,7 @@
                 <% end %>
               <% end %>
               <td class="col-4"><%= "%.2f" %(total_credit_points.to_f/total_credits.to_f) %></td>
-            <% elsif @batch.cwa_enabled? %>
+            <% elsif grade_type=="CWA" %>
               <% total_credits = 0 %>
               <% total_weighted_marks=0 %>
               <% @exam_group.exams.each do |exam| %>
