--- a/app/views/exam/consolidated_exam_report_pdf.erb
+++ b/app/views/exam/consolidated_exam_report_pdf.erb
@@ -21,6 +21,9 @@
 <div id="page-yield">
   <div class="hor_line"></div>
   <h2><%= @exam_group.batch.course.full_name %> <%= @exam_group.batch.name %> - <%= @exam_group.name %></h2>
+  <% grade_type = "normal" %>
+  <% grade_type = "GPA" if @batch.gpa_enabled? %>
+  <% grade_type = "CWA" if @batch.cwa_enabled? %>
   <div class="hor_line"></div>
 
   <div class="extender"> </div>
@@ -33,11 +36,11 @@
       <table id="pdf-table" width="100%" cellspacing="0">
         <tr class="table-header">
           <td><%= t('name') %></td>
-          <% if @batch.gpa_enabled? or @batch.cwa_enabled? %>
+          <% if grade_type=="GPA" or grade_type=="CWA" %>
             <% @exam_group.exams.each do |exam| %>
               <td><%= exam.subject.code %><%= "(" + exam.subject.credit_hours.to_s + ")"  unless exam.subject.credit_hours.nil? %></td>
             <% end %>
-            <% if @batch.cwa_enabled? %>
+            <% if grade_type=="CWA" %>
               <td><%= t('weighted_average') %></td>
             <% else %>
               <td><%= t('gpa') %></td>
@@ -57,11 +60,11 @@
             <tr class="page-break"><td colspan="3"></td></tr>
             <tr class="table-header">
               <td class="col-pdf"><%= t('name') %></td>
-              <% if @batch.gpa_enabled? or @batch.cwa_enabled? %>
+              <% if grade_type=="GPA" or grade_type=="CWA" %>
                 <% @exam_group.exams.each do |exam| %>
                   <td><%= exam.subject.code %><%= "(" + exam.subject.credit_hours.to_s + ")"  unless exam.subject.credit_hours.nil? %></td>
                 <% end %>
-                <% if @batch.cwa_enabled? %>
+                <% if grade_type=="CWA" %>
                   <td><%= t('weighted_average') %></td>
                 <% else %>
                   <td><%= t('gpa') %></td>
@@ -78,7 +81,7 @@
           <% end %>
           <tr class="<%= cycle(c,(["odd","even"]-[c]).first) %>">
             <td class="col-pdf"><%= student.full_name %></td>
-            <% if @batch.gpa_enabled? %>
+            <% if grade_type=="GPA" %>
               <% total_credits = 0 %>
               <% total_credit_points=0 %>
               <% @exam_group.exams.each do |exam| %>
@@ -92,7 +95,7 @@
                 <% end %>
               <% end %>
               <td class="col-pdf"><%= "%.2f" %(total_credit_points.to_f/total_credits.to_f) %></td>
-            <% elsif @batch.cwa_enabled? %>
+            <% elsif grade_type=="CWA" %>
               <% total_credits = 0 %>
               <% total_weighted_marks=0 %>
               <% @exam_group.exams.each do |exam| %>
