modified object fetching logic for delayed job ui and decreased querries in transcript
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@3498 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/app/views/scheduled_jobs/index.html.erb
+++ b/app/views/scheduled_jobs/index.html.erb
@@ -53,7 +53,7 @@
           <% @jobs.each_with_index do |job,i| %>
             <tr class="tr-<%= cycle('odd', 'even') %>">
               <td class="col-1"><%= i+1 %></td>
-              <td class="col-3"><%= obj = job.handler.split(':').second.split(' ').first %></td>
+              <td class="col-3"><%= obj = job.payload_object.class.name %></td>
               <% type = job.handler.split('job_type').last[/\d+/] %>
               <% j_type = "#{obj}/#{type}" %>
               <% if j_type=="Batch/1" %>
