modified job type fetching logic for delayed job
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@3500 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/app/views/scheduled_jobs/index.html.erb
+++ b/app/views/scheduled_jobs/index.html.erb
@@ -54,7 +54,7 @@
             <tr class="tr-<%= cycle('odd', 'even') %>">
               <td class="col-1"><%= i+1 %></td>
               <td class="col-3"><%= obj = job.payload_object.class.name %></td>
-              <% type = job.handler.split('job_type').last[/\d+/] %>
+              <% type = job.payload_object.job_type %>
               <% j_type = "#{obj}/#{type}" %>
               <% if j_type=="Batch/1" %>
                 <td class="col-3">Generate Reports</td>
