income list pdf style issue fixed
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@3503 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/public/stylesheets/finance/income_list_pdf.css
+++ b/public/stylesheets/finance/income_list_pdf.css
@@ -53,12 +53,16 @@
     max-width:90px;
 }
 .name{
-    width:300px;
-    min-width:300px;
-    max-width:300px;
+    width:240px;
+    min-width:240px;
+    max-width:240px;
+    overflow: hidden;
 }
 .desc{
-    width:auto;
+    width:130px;
+    min-width:130px;
+    max-width:130px;
+    overflow: hidden;
 }
 .total_amnt{
     width:100px;
