fixed issue in ranking levels list [fixed #3328]
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@3504 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/app/views/exam/student_ranking_level_report_pdf.html.erb
+++ b/app/views/exam/student_ranking_level_report_pdf.html.erb
@@ -87,10 +87,10 @@
               <% end %>
             </table>
           <% else %>
-            <p class="flash-msg"><%= "#{t('no')} #{@ranking_level.name} #{t('students_found')}" %></p>
+            <p class="flash-msg"><%= "#{t('no_text')} #{@ranking_level.name} #{t('students_found')}" %></p>
           <% end %>
         <% else %>
-          <p class="flash-msg"><%= "#{t('no')} #{@ranking_level.name} #{t('students_found')}" %></p>
+          <p class="flash-msg"><%= "#{t('no_text')} #{@ranking_level.name} #{t('students_found')}" %></p>
         <% end %>
       </div>
     <% else %>
