--- a/app/views/ranking_levels/_ranking_levels.html.erb
+++ b/app/views/ranking_levels/_ranking_levels.html.erb
@@ -4,8 +4,8 @@
     <% @ranking_levels.each_with_index do |rank,i| %>
         <li class="list<%=cycle('odd', 'even')%>">
           <div class="category-name"><%= rank.name %>
-            <span class="category-up-down <%= "#{t('inactive')}" if i==0 %>"><%= link_to_remote "▲",:url=>{:action=>"change_priority",:order=>"up",:id=>rank.id} %></span>
-            <span class="category-up-down <%= "#{t('inactive')}" if i+1==@ranking_levels.count%>"><%= link_to_remote "▼",:url=>{:action=>"change_priority",:order=>"down",:id=>rank.id} %></span>
+            <span class="category-up-down <%= "inactive" if i==0 %>"><%= link_to_remote "▲",:url=>{:action=>"change_priority",:order=>"up",:id=>rank.id} %></span>
+            <span class="category-up-down <%= "inactive" if i+1==@ranking_levels.count%>"><%= link_to_remote "▼",:url=>{:action=>"change_priority",:order=>"down",:id=>rank.id} %></span>
             </div>
           <div class="category-edit"><%= link_to_remote "#{t('edit_text')}", :url=>{:controller=>"ranking_levels",:action=>"edit_ranking_level", :id=>rank.id}  if permitted_to? :edit_ranking_level, :ranking_levels %></div><div class="category-delete">   <%= link_to_remote "#{t('delete')}", :url=>{:controller=>"ranking_levels",:action=>"delete_ranking_level", :id=>rank.id}, :confirm=>"#{t('delete_confirm_msg')}" if permitted_to? :delete_ranking_level, :ranking_levels %></div>
         </li>
