default country added in employee admission2
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@3510 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/app/views/employee/admission2.erb
+++ b/app/views/employee/admission2.erb
@@ -65,7 +65,7 @@
         <hr class="label-underline"></hr>
         <div class="label-field-pair">
           <label><%=  t('country')  %></label>
-          <div class="text-input-bg"><%= select :employee, :home_country_id, @countries.map {|c| [c.name, c.id]}, :selected => 76 %></div>
+          <div class="text-input-bg"><%= select :employee, :home_country_id, @countries.map {|c| [c.name, c.id]}, :selected => @selected_value[1].to_i %></div>
           <div class="extender"></div>
         </div>
         <hr class="label-underline"></hr>
@@ -104,7 +104,7 @@
         <hr class="label-underline"></hr>
         <div class="label-field-pair">
           <label><%= t('country') %></label>
-          <div class="text-input-bg"><%= select :employee, :office_country_id, @countries.map {|c| [c.name, c.id]}, :selected => 76 %></div>
+          <div class="text-input-bg"><%= select :employee, :office_country_id, @countries.map {|c| [c.name, c.id]}, :selected => @selected_value[2].to_i %></div>
           <div class="extender"></div>
         </div>
         <hr class="label-underline"></hr>
