attendance register problem in windows fixed
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@3511 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/public/stylesheets/attendances/index.css
+++ b/public/stylesheets/attendances/index.css
@@ -226,3 +226,12 @@ table.table{
 a {
     cursor: pointer;
 }
+.present{
+/*    color:#FEFFAF;*/
+    color:#fff;
+    padding:5px;
+background:#FFF;
+}
+.td-mark, .td-name{
+    background:#FFF;
+}
