--- a/app/views/layouts/_main_menu.html.erb
+++ b/app/views/layouts/_main_menu.html.erb
@@ -108,7 +108,7 @@
     <% end %>
   <% end %>
   <li class="a"><a href="#"><%= t('more') %> ▼</a>
-    <ul class="level-1">
+    <ul class="level-1" id="more-parent">
       <li><%= link_to "#{t('calendar_text')}" , :controller => "calendar", :action=>"index" %></li>
       <% if permitted_to? :index, :exam %>
         <li><%= link_to "#{t('examination')} <span class='right-arrow'>#{arrow_dir}</span>" , :controller => "exam", :action=>"index" %>
@@ -196,34 +196,60 @@
       <% if @current_user.admin? %>
         <li><%= link_to "#{t('user_text')}" , :controller => "user", :action=>"index" %></li>
       <% end %>
-      <% FedenaPlugin::AVAILABLE_MODULES.each do |mod| %>
-        <% unless mod[:more_menu].blank? %>
-          <% arrow = mod[:sub_menus].present? ? " <span class='right-arrow'>#{arrow_dir}</span>" : "" %>
-          <% if permitted_to? "#{mod[:more_menu][:action]}".to_sym,"#{mod[:more_menu][:controller]}".to_sym %>
-            <li><%= link_to "#{t(mod[:more_menu][:title])}#{arrow}",:controller => "#{mod[:more_menu][:controller]}", :action=>"#{mod[:more_menu][:action]}" %>
-              <% unless mod[:sub_menus].blank? %>
-                <ul class="level-2">
-                  <% mod[:sub_menus].each do |submenu| %>
-                    <li><%= link_to "#{t(submenu[:title])}",:controller => "#{submenu[:controller]}", :action=>"#{submenu[:action]}"  if permitted_to? "#{submenu[:action]}".to_sym,"#{submenu[:controller]}".to_sym  %></li>
-                  <% end %>
-                </ul>
-              <% end %>
-            </li>
-          <% end %>
-        <% end %>
-      <% end %>
+<%# FedenaPlugin::AVAILABLE_MODULES.each do |mod| %>
+<%# unless mod[:more_menu].blank? %>
+<%# arrow = mod[:sub_menus].present? ? " <span class='right-arrow'>#{arrow_dir}</span>" : "" %>
+<%# if permitted_to? "#{mod[:more_menu][:action]}".to_sym,"#{mod[:more_menu][:controller]}".to_sym %>
+<%#*<li><%= link_to "#{t(mod[:more_menu][:title])}#{arrow}",:controller => "#{mod[:more_menu][:controller]}", :action=>"#{mod[:more_menu][:action]}" %>
+<%# unless mod[:sub_menus].blank? %>
+<%#*<ul class="level-2">%>
+<%# mod[:sub_menus].each do |submenu| %>
+<%#*<li><%= link_to "#{t(submenu[:title])}",:controller => "#{submenu[:controller]}", :action=>"#{submenu[:action]}"  if permitted_to? "#{submenu[:action]}".to_sym,"#{submenu[:controller]}".to_sym  %><%#</li>%>
+<%# end %>
+<%#*</ul>%>
+<%# end %>
+<%#*</li>%>
+<%# end %>
+<%# end %>
+<%# end %>
     </ul>
   </li>
 </ul>
 
 <script type="text/javascript">
   function load_menu_from_plugins(){
-    <% FedenaPlugin::ADDITIONAL_LINKS[:generic_hook].each do |mod|  %>
-      <% if mod[:menu_id].present? %>
-        <% if permitted_to? mod[:destination][:action].to_sym,mod[:destination][:controller].to_sym %>
-          $('<%= mod[:menu_id] %>').insert({bottom: '<li><%= link_to(t(mod[:title]), :controller=>mod[:destination][:controller].to_sym,:action=>mod[:destination][:action].to_sym) %></li>'})
+<% FedenaPlugin::AVAILABLE_MODULES.each do |mod|  %>
+  <% unless mod[:more_menu].blank? %>
+    <% arrow = mod[:sub_menus].present? ? " <span class=right-arrow>#{arrow_dir}</span>" : "" %>
+    <% if mod[:more_menu][:target_id].present? %>
+      <% if permitted_to? mod[:more_menu][:action].to_sym,mod[:more_menu][:controller].to_sym %>
+        <% unless mod[:sub_menus].blank? %>
+              $('<%= mod[:more_menu][:target_id] %>').insert({bottom: '<li><%= link_to "#{t(mod[:more_menu][:title])}#{arrow}",:controller => "#{mod[:more_menu][:controller]}", :action=>"#{mod[:more_menu][:action]}" %><ul class="level-2" id="<%= mod[:name] %>"></ul></li>'})
+        <% else %>
+              $('<%= mod[:more_menu][:target_id] %>').insert({bottom: '<li><%= link_to "#{t(mod[:more_menu][:title])}#{arrow}",:controller => "#{mod[:more_menu][:controller]}", :action=>"#{mod[:more_menu][:action]}" %></li>'})
+        <% end %>
+      <% end %>
+      <% unless mod[:sub_menus].blank? %>
+        <% mod[:sub_menus].each do |submenu| %>
+          <% if submenu[:target_id].present? %>
+                $('<%= submenu[:target_id] %>').insert({bottom: '<li><%= link_to "#{t(submenu[:title])}",:controller => "#{submenu[:controller]}", :action=>"#{submenu[:action]}"  if permitted_to? "#{submenu[:action]}".to_sym,"#{submenu[:controller]}".to_sym  %></li>'})
+          <% end %>
         <% end %>
       <% end %>
     <% end %>
+  <% end %>
+<% end %>
   }
 </script>
+
+<%#*<script type="text/javascript">%>
+<%#*function load_menu_from_plugins(){%>
+<%# FedenaPlugin::ADDITIONAL_LINKS[:generic_hook].each do |mod|  %>
+<%# if mod[:menu_id].present? %>
+<%# if permitted_to? mod[:destination][:action].to_sym,mod[:destination][:controller].to_sym %>
+<%#*$('<%= mod[:menu_id] %><%#').insert({bottom: '<li><%= link_to(t(mod[:title]), :controller=>mod[:destination][:controller].to_sym,:action=>mod[:destination][:action].to_sym) %><%#</li>'})%>
+<%# end %>
+<%# end %>
+<%# end %>
+<%#*}%>
+<%#*</script>%>
