--- a/app/views/sms/index.html.erb
+++ b/app/views/sms/index.html.erb
@@ -33,18 +33,22 @@
       <div class="link-descr"><%= t('sms_settings_page') %></div>
     </div>
     <% if @sms_setting.application_sms_active %>
-      <div class="link-box">
-        <div class="link-heading"><%= link_to "#{t('send_sms_to_students')}",:action=>'students'%></div>
-        <div class="link-descr"><%= t('send_sms_to_students') %></div>
-      </div>
+      <% if @students_sms_enabled.is_enabled %>
+        <div class="link-box">
+          <div class="link-heading"><%= link_to "#{t('send_sms_to_students')}",:action=>'students'%></div>
+          <div class="link-descr"><%= t('send_sms_to_students') %></div>
+        </div>
+      <% end %>
       <div class="link-box">
         <div class="link-heading"><%= link_to "#{t('sms_to_batches')}",:action=>'batches'%></div>
         <div class="link-descr"><%= t('sms_to_batches') %></div>
       </div>
-      <div class="link-box">
-        <div class="link-heading"><%= link_to "#{t('sms_to_employees')}",:action=>'employees'%></div>
-        <div class="link-descr"><%= t('sms_to_employees') %></div>
-      </div>
+      <% if @employees_sms_enabled.is_enabled %>
+        <div class="link-box">
+          <div class="link-heading"><%= link_to "#{t('sms_to_employees')}",:action=>'employees'%></div>
+          <div class="link-descr"><%= t('sms_to_employees') %></div>
+        </div>
+      <% end %>
       <div class="link-box">
         <div class="link-heading"><%= link_to "#{t('sms_to_employee_department')}",:action=>'departments'%></div>
         <div class="link-descr"><%= t('sms_to_employee_department') %></div>
