fixes #3468 [Disable SMS links as per settings]
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@3515 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/app/views/sms/index.html.erb
+++ b/app/views/sms/index.html.erb
@@ -33,13 +33,13 @@
       <div class="link-descr"><%= t('sms_settings_page') %></div>
     </div>
     <% if @sms_setting.application_sms_active %>
-      <% if @students_sms_enabled.is_enabled and  @parents_sms_enabled.is_enabled %>
+      <% if @students_sms_enabled.is_enabled or @parents_sms_enabled.is_enabled %>
         <div class="link-box">
           <div class="link-heading"><%= link_to "#{t('send_sms_to_students')}",:action=>'students'%></div>
           <div class="link-descr"><%= t('send_sms_to_students') %></div>
         </div>
       <% end %>
-      <% if @students_sms_enabled.is_enabled and  @parents_sms_enabled.is_enabled %>
+      <% if @students_sms_enabled.is_enabled or  @parents_sms_enabled.is_enabled %>
         <div class="link-box">
           <div class="link-heading"><%= link_to "#{t('sms_to_batches')}",:action=>'batches'%></div>
           <div class="link-descr"><%= t('sms_to_batches') %></div>
