attendance register problem in windows fixed
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@3516 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/app/views/attendances/index.html.erb
+++ b/app/views/attendances/index.html.erb
@@ -23,6 +23,20 @@
   <% else %>
     <%= javascript_include_tag 'subject_leave', 'date' %>
   <% end %>
+  <!--[if IE]>
+  <style>
+
+  .present{
+    color:#fff;
+    padding:5px;
+    background:#FFF;
+  }
+  .td-mark, .td-name{
+    background:#FFF;
+  }
+
+  </style>
+  <![endif]-->
 <%  end %>
 <div id="content-header">
   <%= image_tag("/images/attendence/attendence.png") %>
