default country bug fixed in employee edit
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@3542 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/app/views/employee/edit2.erb
+++ b/app/views/employee/edit2.erb
@@ -63,7 +63,7 @@
       <hr class="label-underline"></hr>
           <div class="label-field-pair">
             <label><%= t('country') %></label>
-            <div class="text-input-bg"><%= select :employee, :home_country_id, @countries.map {|c| [c.name, c.id]}, :selected => 76 %></div>
+            <div class="text-input-bg"><%= select :employee, :home_country_id, @countries.map {|c| [c.name, c.id]}, :selected => @employee.home_country_id %></div>
             <div class="extender"></div>
           </div>
       <hr class="label-underline"></hr>
@@ -101,7 +101,7 @@
       <hr class="label-underline"></hr>
           <div class="label-field-pair">
             <label><%= t('country') %></label>
-            <div class="text-input-bg"><%= select :employee, :office_country_id, @countries.map {|c| [c.name, c.id]}, :selected => 76 %></div>
+            <div class="text-input-bg"><%= select :employee, :office_country_id, @countries.map {|c| [c.name, c.id]}, :selected => @employee.office_country_id %></div>
             <div class="extender"></div>
           </div>
       <hr class="label-underline"></hr>
